# feature_based_detector

./: CMakeLists.txt  README.md  package.xml
src/: feature_based_detector_node.cpp
